--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+karlyriceditor (1.11-1) UNRELEASED; urgency=medium
+
+  * Upstream 1.3 to 1.11
+
+ -- Martin Steghöfer <martin@steghoefer.eu>  Sat, 15 Feb 2014 13:04:58 +0100
+
 karlyriceditor (1.3-1) unstable; urgency=low
 
   * Initial release (Closes: #692968)
