--- a/changelog
+++ b/changelog
@@ -1,8 +1,11 @@
-karlyriceditor (1.11-1) UNRELEASED; urgency=medium
+karlyriceditor (1.11-1) unstable; urgency=low
 
   * Upstream 1.3 to 1.11
+  * debian/control
+    - Declared new dependency to libavresample-dev (build)
+      and libavresample1 (binary)
 
- -- Martin Steghöfer <martin@steghoefer.eu>  Sat, 15 Feb 2014 13:04:58 +0100
+ -- Martin Steghöfer <martin@steghoefer.eu>  Sun, 16 Feb 2014 10:57:11 +0100
 
 karlyriceditor (1.3-1) unstable; urgency=low
 
