--- a/changelog
+++ b/changelog
@@ -4,8 +4,10 @@ karlyriceditor (1.11-1) unstable; urgency=low
   * debian/control
     - Declared new dependency to libavresample-dev (build)
       and libavresample1 (binary)
+  * debian/patches/ffmpeg-vs-libav.patch
+    - Fix compilation: Translate FFmpeg calls to Libav-compatible calls
 
- -- Martin Steghöfer <martin@steghoefer.eu>  Sun, 16 Feb 2014 10:57:11 +0100
+ -- Martin Steghöfer <martin@steghoefer.eu>  Sat, 12 Apr 2014 17:10:08 +0200
 
 karlyriceditor (1.3-1) unstable; urgency=low
 
