--- a/changelog
+++ b/changelog
@@ -6,8 +6,11 @@ karlyriceditor (1.11-1) unstable; urgency=low
       and libavresample1 (binary)
   * debian/patches/ffmpeg-vs-libav.patch
     - Fix compilation: Translate FFmpeg calls to Libav-compatible calls
+  * debian/patches/remove-openssl-dependency.patch
+    - Extend the patch's range to also deactivate the recently implemented
+      OpenSSL-based functionality
 
- -- Martin Steghöfer <martin@steghoefer.eu>  Sat, 12 Apr 2014 17:10:08 +0200
+ -- Martin Steghöfer <martin@steghoefer.eu>  Sun, 20 Apr 2014 12:02:53 +0200
 
 karlyriceditor (1.3-1) unstable; urgency=low
 
