--- a/changelog
+++ b/changelog
@@ -9,8 +9,11 @@ karlyriceditor (1.11-1) unstable; urgency=low
   * debian/patches/remove-openssl-dependency.patch
     - Extend the patch's range to also deactivate the recently implemented
       OpenSSL-based functionality
+  * debian/rules
+    - Make sure that we compile against Qt4, even if Qt5 is installed and set
+      as preferred version via update-alternatives.
 
- -- Martin Steghöfer <martin@steghoefer.eu>  Sun, 20 Apr 2014 12:02:53 +0200
+ -- Martin Steghöfer <martin@steghoefer.eu>  Sat, 03 May 2014 16:25:31 +0200
 
 karlyriceditor (1.3-1) unstable; urgency=low
 
