--- a/changelog
+++ b/changelog
@@ -15,8 +15,9 @@ karlyriceditor (1.11-1) unstable; urgency=low
   * debian/control
     - Update dependencies of binary package to the versions of libav* that are
       currently available in "unstable"
+    - Upgraded standards version
 
- -- Martin Steghöfer <martin@steghoefer.eu>  Thu, 08 May 2014 19:42:15 +0200
+ -- Martin Steghöfer <martin@steghoefer.eu>  Thu, 08 May 2014 23:06:04 +0200
 
 karlyriceditor (1.3-1) unstable; urgency=low
 
