--- a/changelog
+++ b/changelog
@@ -16,8 +16,10 @@ karlyriceditor (1.11-1) unstable; urgency=low
     - Update dependencies of binary package to the versions of libav* that are
       currently available in "unstable"
     - Upgraded standards version
+  * debian/menu
+    - Using absolute path for menu icons
 
- -- Martin Steghöfer <martin@steghoefer.eu>  Thu, 08 May 2014 23:06:04 +0200
+ -- Martin Steghöfer <martin@steghoefer.eu>  Thu, 08 May 2014 23:08:01 +0200
 
 karlyriceditor (1.3-1) unstable; urgency=low
 
