--- a/changelog
+++ b/changelog
@@ -12,6 +12,8 @@ karlyriceditor (1.11-1) unstable; urgency=low
   * debian/rules
     - Make sure that we compile against Qt4, even if Qt5 is installed and set
       as preferred version via update-alternatives.
+    - Override dh_installdocs to make sure the changelog file has a name that
+      complies with Debian rules
   * debian/control
     - Update dependencies of binary package to the versions of libav* that are
       currently available in "unstable"
@@ -19,7 +21,7 @@ karlyriceditor (1.11-1) unstable; urgency=low
   * debian/menu
     - Using absolute path for menu icons
 
- -- Martin Steghöfer <martin@steghoefer.eu>  Thu, 08 May 2014 23:08:01 +0200
+ -- Martin Steghöfer <martin@steghoefer.eu>  Thu, 08 May 2014 23:36:16 +0200
 
 karlyriceditor (1.3-1) unstable; urgency=low
 
