--- a/changelog
+++ b/changelog
@@ -20,8 +20,11 @@ karlyriceditor (1.11-1) unstable; urgency=low
     - Upgraded standards version
   * debian/menu
     - Using absolute path for menu icons
+  * debian/patches/desktop.patch
+    - Added "Keywords" entry to get rid of lintian warning
+      desktop-entry-lacks-keywords-entry
 
- -- Martin Steghöfer <martin@steghoefer.eu>  Thu, 08 May 2014 23:36:16 +0200
+ -- Martin Steghöfer <martin@steghoefer.eu>  Fri, 09 May 2014 00:01:31 +0200
 
 karlyriceditor (1.3-1) unstable; urgency=low
 
