--- a/changelog
+++ b/changelog
@@ -23,8 +23,10 @@ karlyriceditor (1.11-1) unstable; urgency=low
   * debian/patches/desktop.patch
     - Added "Keywords" entry to get rid of lintian warning
       desktop-entry-lacks-keywords-entry
+  * Added opaque background to icons in png and xpm format for better
+    visual clarity
 
- -- Martin Steghöfer <martin@steghoefer.eu>  Fri, 09 May 2014 00:01:31 +0200
+ -- Martin Steghöfer <martin@steghoefer.eu>  Fri, 09 May 2014 00:46:09 +0200
 
 karlyriceditor (1.3-1) unstable; urgency=low
 
