--- a/changelog
+++ b/changelog
@@ -4,7 +4,7 @@ karlyriceditor (1.11-1) unstable; urgency=low
   * debian/control
     - Declared new dependency to libavresample-dev (build)
       and libavresample1 (binary)
-  * debian/patches/ffmpeg-vs-libav.patch
+  * debian/patches/ffmpeg-vs-libav-compilation.patch
     - Fix compilation: Translate FFmpeg calls to Libav-compatible calls
   * debian/patches/remove-openssl-dependency.patch
     - Extend the patch's range to also deactivate the recently implemented
@@ -25,8 +25,11 @@ karlyriceditor (1.11-1) unstable; urgency=low
       desktop-entry-lacks-keywords-entry
   * Added opaque background to icons in png and xpm format for better
     visual clarity
+  * debian/patches/ffmpeg-vs-libav-avframe-allocation.patch
+    - Fix segfault due to AVFrame initialization differences between Libav
+      (used in Debian) and FFmpeg (used by upstream developer)
 
- -- Martin Steghöfer <martin@steghoefer.eu>  Fri, 09 May 2014 00:46:09 +0200
+ -- Martin Steghöfer <martin@steghoefer.eu>  Sat, 10 May 2014 01:15:46 +0200
 
 karlyriceditor (1.3-1) unstable; urgency=low
 
