--- a/changelog
+++ b/changelog
@@ -28,8 +28,12 @@ karlyriceditor (1.11-1) unstable; urgency=low
   * debian/patches/ffmpeg-vs-libav-avframe-allocation.patch
     - Fix segfault due to AVFrame initialization differences between Libav
       (used in Debian) and FFmpeg (used by upstream developer)
+  * debian/patches/ffmpeg-vs-libav-aspect-ratio.patch
+    - Fix floating-point exception due to unset sample aspect ratio of
+      AVStream (has to be the same as the one of the codec in Libav,
+      upstream uses FFmpeg)
 
- -- Martin Steghöfer <martin@steghoefer.eu>  Sat, 10 May 2014 01:15:46 +0200
+ -- Martin Steghöfer <martin@steghoefer.eu>  Sat, 10 May 2014 13:52:19 +0200
 
 karlyriceditor (1.3-1) unstable; urgency=low
 
