--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+karlyriceditor (1.11-2) UNRELEASED; urgency=medium
+
+  * Partially unpatch the code because FFmpeg is back in Debian.
+  * Patch the source code to make it compile with the upcoming FFmpeg 2.9/3.0.
+    Thanks to Andreas Cadhalpun
+
+ -- Martin Steghöfer <martin@steghoefer.eu>  Wed, 09 Mar 2016 14:02:35 +0100
+
 karlyriceditor (1.11-1) unstable; urgency=low
 
   * Initial release (Closes: #692968)
