--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-karlyriceditor (1.11-2) UNRELEASED; urgency=medium
+karlyriceditor (1.11-2) unstable; urgency=medium
 
   * Partially unpatch the code because FFmpeg is back in Debian.
   * Patch the source code to make it compile with the upcoming FFmpeg 2.9/3.0.
